sidebar: Fix CSS for right-aligned sidebar

--- a/src/components/AppMapSidebar.less
+++ b/src/components/AppMapSidebar.less
@@ -4,6 +4,13 @@
 
 .leaflet-sidebar-right {
   right: 0;
+  .leaflet-sidebar-header {
+    padding-left: 20px;
+  }
+  .leaflet-sidebar-close {
+    left: auto;
+    right: 0;
+  }
 }
 
 #sidebar {
@@ -66,7 +73,7 @@
     }
 
     .dropdown-menu a {
-      color: #212529;
+      color: #212529 !important;
       padding: 0.25rem 1rem;
     }
   }
